# customer-email-agent

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
src/email_agent/: __init__.py  cli.py  config.py  pipeline.py
src/email_agent/agents/: __init__.py  classifier.py  drafter.py  extractor.py
src/email_agent/models/: __init__.py  schemas.py
src/email_agent/tools/: __init__.py  llm.py
