[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-agent"
version = "0.1.0"
description = "AI agent that triages customer emails for small businesses — classify, extract, draft replies, and export CRM-ready data. Human-in-the-loop by design."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Chenney Zhuang", email = "dev@example.com"},
]
keywords = ["email", "ai-agent", "customer-service", "llm", "classification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
email-agent = "email_agent.cli:app"

[project.urls]
Homepage = "https://github.com/ChenneyZhuang/customer-email-agent"
Repository = "https://github.com/ChenneyZhuang/customer-email-agent"
Issues = "https://github.com/ChenneyZhuang/customer-email-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/email_agent"]

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
